# catalib

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
book/: README.md  SUMMARY.md  changelog.md  troubleshooting.md
book/cli/: build.md  doctor.md  init.md  logs.md  overview.md  watch.md
book/contributing/: gitbook.md  publishing.md
book/deployment/: device-setup.md  distribution.md  workflow.md
book/examples/: recipes.md  toolbox.md
book/getting-started/: concepts.md  installation.md  quickstart.md
book/guide/: android.md  class-proxy.md  dependencies.md  hooks.md  manifest.md  menu-items.md  plugin-class.md  project-structure.md  sdk-access.md  settings.md  testing.md  typing.md
book/internals/: how-it-works.md  metadata-and-validation.md
book/reference/: api.md  cli.md  errors.md
docs/: README.md  glossary.md
docs/architecture/: overview.md
docs/architecture/decisions/: ADR-0001-modulnyj-monolit.md  ADR-0002-bundler-meta-path.md  ADR-0003-mini-frejmvork-poverh-sdk.md  ADR-0004-deploy-cherez-dev-server.md  ADR-0005-watchfiles-optional.md  ADR-0006-paritet-support-sdk.md  ADR-0007-polnyj-paritet-sdk.md  ADR-0008-treeshaking-vendora.md  ADR-0009-tipizatsiya-i-sdk-staby.md  ADR-0010-intents-i-catalib-logs.md  ADR-0011-podderzhka-android-termux-pydroid.md
docs/architecture/evidence/: T-011-probe-result.json
docs/components/: README.md  bundler.md  cli.md  deploy.md  manifest.md  runtime.md  scaffold.md  support.md
docs/guides/: device-workflow.md
docs/plans/: implementation-plan.md  task-plan.md
example/: README.md  catalib.toml  conftest.py
example/src/: __init__.py  config.py  plugin.py
example/src/commands/: __init__.py  calc.py  stats_cmd.py
example/src/commands/ids/: __init__.py  hash_cmd.py  uuid_cmd.py
example/src/commands/notes/: __init__.py  commands.py
example/src/commands/random/: __init__.py  (+3 more)
example/src/core/: __init__.py  command.py  errors.py  parser.py  registry.py
example/src/domain/: __init__.py  dice.py  note.py
example/src/safe_eval/: __init__.py  arithmetic.py
example/src/services/: __init__.py  notes_service.py  stats_service.py
example/src/storage/: __init__.py  json_store.py  notes_repository.py  paths.py
example/src/ui/: __init__.py  settings_schema.py
example/src/util/: __init__.py  formatting.py  textwrap_helpers.py
example/tests/: test_calc.py  test_dice.py  test_notes_and_stats.py  test_parser.py  test_plugin.py  test_registry.py  test_text_and_ids.py
src/catalib/: __init__.py  __main__.py  devicelogs.py  diagnostics.py  platforms.py  testing.py  watching.py
src/catalib/bundler/: __init__.py  compiler.py  discovery.py  model.py  requirements.py  sourcemap.py  treeshake.py  vendor.py
src/catalib/cli/: __init__.py  _pipeline.py  app.py  build_command.py  doctor_command.py  init_command.py  logs_command.py  stubs_command.py  watch_command.py
src/catalib/deploy/: __init__.py  adb.py  devserver.py  reload.py
src/catalib/manifest/: __init__.py  loader.py  metadata.py  model.py
src/catalib/runtime/: __init__.py  bootstrap.py
src/catalib/scaffold/: __init__.py  templates.py
src/catalib/sdk_stubs/: __init__.py  android_utils.pyi  base_plugin.pyi  client_utils.pyi  file_utils.pyi  hook_utils.pyi
src/catalib/support/: __init__.py  android.py  bulletins.py  classes.py  client.py  dialogs.py  files.py  formatting.py  hooks.py  plugin.py  proxy.py  reflection.py  sdk.py  settings.py  xposed.py
tests/: conftest.py
tests/fixtures/probe/: catalib_probe.py
tests/integration/: test_bundle_roundtrip.py  test_scaffold_build.py  test_template_projects.py
tests/unit/: test_devicelogs.py  test_diagnostics.py  test_environment_boundary.py  test_platforms.py  test_sdk_stubs.py  test_smoke.py  test_testing_harness.py  test_update_check.py  test_watching.py
tests/unit/bundler/: test_compiler.py  test_discovery.py  test_requirements.py  test_sourcemap.py  test_treeshake.py
tests/unit/cli/: test_app.py  test_watch.py  test_watch_optional.py
tests/unit/deploy/: test_adb.py  test_devserver.py  test_reload.py
tests/unit/manifest/: test_loader.py  test_metadata.py  test_model.py  test_vendor_option.py
tests/unit/runtime/: test_bootstrap.py
tests/unit/scaffold/: test_scaffold.py  test_templates.py
tests/unit/support/: test_android.py  test_app_event.py  test_bulletins.py  test_classes.py  test_client.py  test_dialogs.py  test_files.py  test_formatting.py  test_hooks_map.py  test_plugin.py  test_proxy.py  test_public_api.py  test_reflection.py  test_sdk.py  test_settings.py  test_xposed.py
(+14 files in other folders)
